--- a/DotPattern-UIBezierPath-Test/DotPattern-UIBezierPath-Test/Base.lproj/Main.storyboard
+++ b/DotPattern-UIBezierPath-Test/DotPattern-UIBezierPath-Test/Base.lproj/Main.storyboard
@@ -11,21 +11,91 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--Fish-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="DotPattern_UIBezierPath_Test" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="FishViewController" customModule="DotPattern_UIBezierPath_Test" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="19j-xx-Q5w">
+                                <rect key="frame" x="0.0" y="20" width="375" height="542.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gwm-e3-ACV">
+                                <rect key="frame" x="0.0" y="563.5" width="375" height="54.5"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gpb-l7-hOO">
+                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="54.5"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pxf-of-Rby">
+                                                <rect key="frame" x="62" y="12" width="62" height="30"/>
+                                                <state key="normal" title="View Dot"/>
+                                                <connections>
+                                                    <action selector="viewDotAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ATK-Me-jgV"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="pxf-of-Rby" firstAttribute="centerX" secondItem="gpb-l7-hOO" secondAttribute="centerX" id="ON2-jM-W6k"/>
+                                            <constraint firstItem="pxf-of-Rby" firstAttribute="centerY" secondItem="gpb-l7-hOO" secondAttribute="centerY" id="cA1-4b-4V7"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SI9-Ib-70i">
+                                        <rect key="frame" x="187.5" y="0.0" width="187.5" height="54.5"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lH5-O5-SAj">
+                                                <rect key="frame" x="59" y="12.5" width="70" height="30"/>
+                                                <state key="normal" title="Show Fish"/>
+                                                <connections>
+                                                    <action selector="showFishAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IXh-0K-FPa"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="lH5-O5-SAj" firstAttribute="centerY" secondItem="SI9-Ib-70i" secondAttribute="centerY" id="3QC-XX-TMQ"/>
+                                            <constraint firstItem="lH5-O5-SAj" firstAttribute="centerX" secondItem="SI9-Ib-70i" secondAttribute="centerX" id="v5D-W1-rNo"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="gpb-l7-hOO" firstAttribute="top" secondItem="Gwm-e3-ACV" secondAttribute="top" id="F5Y-wF-au5"/>
+                                    <constraint firstItem="SI9-Ib-70i" firstAttribute="leading" secondItem="gpb-l7-hOO" secondAttribute="trailing" id="Hgb-4z-S6p"/>
+                                    <constraint firstItem="SI9-Ib-70i" firstAttribute="width" secondItem="gpb-l7-hOO" secondAttribute="width" id="KJm-VA-FMn"/>
+                                    <constraint firstItem="gpb-l7-hOO" firstAttribute="leading" secondItem="Gwm-e3-ACV" secondAttribute="leading" id="KWA-eR-eFl"/>
+                                    <constraint firstAttribute="bottom" secondItem="SI9-Ib-70i" secondAttribute="bottom" id="fJY-rX-brb"/>
+                                    <constraint firstAttribute="trailing" secondItem="SI9-Ib-70i" secondAttribute="trailing" id="hd7-Af-AVV"/>
+                                    <constraint firstItem="SI9-Ib-70i" firstAttribute="top" secondItem="Gwm-e3-ACV" secondAttribute="top" id="q4L-Uy-A7q"/>
+                                    <constraint firstAttribute="bottom" secondItem="gpb-l7-hOO" secondAttribute="bottom" id="sWs-8j-UMo"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Gwm-e3-ACV" secondAttribute="trailing" id="4aC-cY-ryf"/>
+                            <constraint firstItem="Gwm-e3-ACV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="6vJ-6c-mPG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Gwm-e3-ACV" secondAttribute="bottom" id="VlZ-JN-I8U"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="19j-xx-Q5w" secondAttribute="trailing" id="bHh-Eu-t0J"/>
+                            <constraint firstItem="Gwm-e3-ACV" firstAttribute="height" secondItem="19j-xx-Q5w" secondAttribute="height" multiplier="1:10" id="cD8-Ez-Qio"/>
+                            <constraint firstItem="19j-xx-Q5w" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="d9y-gN-Y0Z"/>
+                            <constraint firstItem="Gwm-e3-ACV" firstAttribute="top" secondItem="19j-xx-Q5w" secondAttribute="bottom" constant="1" id="eAO-PG-B5p"/>
+                            <constraint firstItem="19j-xx-Q5w" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="rcb-PA-ex0"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="ykl-1i-3g5"/>
+                    <tabBarItem key="tabBarItem" title="Fish" id="ykl-1i-3g5"/>
+                    <connections>
+                        <outlet property="dotView" destination="19j-xx-Q5w" id="SW0-16-LyU"/>
+                        <outlet property="viewDotButton" destination="pxf-of-Rby" id="qqn-3m-CUS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1089" y="1312"/>
+            <point key="canvasLocation" x="1088.8" y="1311.9940029985009"/>
         </scene>
         <!--HeartPath-->
         <scene sceneID="ikx-9m-Hb1">
