--- a/DotPattern-UIBezierPath-Test/DotPattern-UIBezierPath-Test/Base.lproj/Main.storyboard
+++ b/DotPattern-UIBezierPath-Test/DotPattern-UIBezierPath-Test/Base.lproj/Main.storyboard
@@ -11,6 +11,94 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--HelloDot-->
+        <scene sceneID="kBI-dK-cfL">
+            <objects>
+                <viewController id="OGM-ra-Mbv" customClass="HelloDotViewController" customModule="DotPattern_UIBezierPath_Test" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8ZO-dN-x6R">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7li-eb-4C1">
+                                <rect key="frame" x="0.0" y="20" width="375" height="543"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B7D-2a-pVR">
+                                <rect key="frame" x="0.0" y="563.5" width="375" height="54.5"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ol6-DL-R8S">
+                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="54.5"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BjP-Mv-cNA">
+                                                <rect key="frame" x="62" y="12" width="62" height="30"/>
+                                                <state key="normal" title="View Dot"/>
+                                                <connections>
+                                                    <action selector="viewDotAction:" destination="OGM-ra-Mbv" eventType="touchUpInside" id="U8w-mn-cCE"/>
+                                                    <action selector="viewDotAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bxc-69-IgX"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="BjP-Mv-cNA" firstAttribute="centerX" secondItem="ol6-DL-R8S" secondAttribute="centerX" id="buO-Bn-rDu"/>
+                                            <constraint firstItem="BjP-Mv-cNA" firstAttribute="centerY" secondItem="ol6-DL-R8S" secondAttribute="centerY" id="y9B-eJ-6MB"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c5s-gg-oZl">
+                                        <rect key="frame" x="187.5" y="0.0" width="187.5" height="54.5"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qxf-Cl-eRO">
+                                                <rect key="frame" x="43" y="12.5" width="102" height="30"/>
+                                                <state key="normal" title="Show HelloDot"/>
+                                                <connections>
+                                                    <action selector="showFishAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PH8-l1-bvO"/>
+                                                    <action selector="showHelloDotAction:" destination="OGM-ra-Mbv" eventType="touchUpInside" id="xlS-Ha-gle"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="qxf-Cl-eRO" firstAttribute="centerX" secondItem="c5s-gg-oZl" secondAttribute="centerX" id="Gpr-9Z-Kg4"/>
+                                            <constraint firstItem="qxf-Cl-eRO" firstAttribute="centerY" secondItem="c5s-gg-oZl" secondAttribute="centerY" id="Zy2-lB-Vu9"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="c5s-gg-oZl" firstAttribute="width" secondItem="ol6-DL-R8S" secondAttribute="width" id="BH1-Wp-0v5"/>
+                                    <constraint firstAttribute="bottom" secondItem="ol6-DL-R8S" secondAttribute="bottom" id="OCM-hF-dVZ"/>
+                                    <constraint firstItem="ol6-DL-R8S" firstAttribute="top" secondItem="B7D-2a-pVR" secondAttribute="top" id="WEv-dk-Rfw"/>
+                                    <constraint firstItem="c5s-gg-oZl" firstAttribute="top" secondItem="B7D-2a-pVR" secondAttribute="top" id="ZhH-QY-UAs"/>
+                                    <constraint firstItem="ol6-DL-R8S" firstAttribute="leading" secondItem="B7D-2a-pVR" secondAttribute="leading" id="bi8-M1-pOf"/>
+                                    <constraint firstItem="c5s-gg-oZl" firstAttribute="leading" secondItem="ol6-DL-R8S" secondAttribute="trailing" id="lXd-Uu-mwu"/>
+                                    <constraint firstAttribute="trailing" secondItem="c5s-gg-oZl" secondAttribute="trailing" id="men-37-NYd"/>
+                                    <constraint firstAttribute="bottom" secondItem="c5s-gg-oZl" secondAttribute="bottom" id="ovi-dy-LTl"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="MG6-hj-UuO" firstAttribute="bottom" secondItem="B7D-2a-pVR" secondAttribute="bottom" id="1TS-NC-ukQ"/>
+                            <constraint firstItem="7li-eb-4C1" firstAttribute="top" secondItem="MG6-hj-UuO" secondAttribute="top" id="ANL-iC-IEk"/>
+                            <constraint firstItem="B7D-2a-pVR" firstAttribute="top" secondItem="7li-eb-4C1" secondAttribute="bottom" constant="1" id="B5y-e6-7rJ"/>
+                            <constraint firstItem="MG6-hj-UuO" firstAttribute="trailing" secondItem="B7D-2a-pVR" secondAttribute="trailing" id="J3O-Wn-Tt5"/>
+                            <constraint firstItem="MG6-hj-UuO" firstAttribute="trailing" secondItem="7li-eb-4C1" secondAttribute="trailing" id="XKo-y4-Fy0"/>
+                            <constraint firstItem="B7D-2a-pVR" firstAttribute="leading" secondItem="8ZO-dN-x6R" secondAttribute="leading" id="qr7-Hr-vRE"/>
+                            <constraint firstItem="B7D-2a-pVR" firstAttribute="height" secondItem="7li-eb-4C1" secondAttribute="height" multiplier="1:10" id="ru7-eM-skL"/>
+                            <constraint firstItem="7li-eb-4C1" firstAttribute="leading" secondItem="MG6-hj-UuO" secondAttribute="leading" id="wQD-UR-Y2Y"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="MG6-hj-UuO"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="HelloDot" id="ZR8-k5-dKp"/>
+                    <connections>
+                        <outlet property="dotView" destination="7li-eb-4C1" id="o3g-ZH-w6a"/>
+                        <outlet property="viewDotButton" destination="BjP-Mv-cNA" id="AsJ-BY-G7t"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jfg-ru-gHM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="104" y="1344"/>
+        </scene>
         <!--Fish-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -342,6 +430,7 @@
                         <segue destination="CWJ-8Q-Bh9" kind="relationship" relationship="viewControllers" id="SWG-nw-Nhp"/>
                         <segue destination="9Sy-kV-iG4" kind="relationship" relationship="viewControllers" id="402-tL-ASf"/>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="nJe-wx-DuD"/>
+                        <segue destination="OGM-ra-Mbv" kind="relationship" relationship="viewControllers" id="N65-Ya-e1V"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jjh-i0-0rB" userLabel="First Responder" sceneMemberID="firstResponder"/>
